# text-editors

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  text-editors.cabal
.vim/: coc-settings.json
app/: Main.hs
src/: hie.yaml
src/Text/Editor/: Editable.hs  Reference.hs  Types.hs
src/Text/Editor/PieceTable/: IO.hs  Pure.hs  Types.hs
src/Text/Editor/Reference/: IO.hs  Pure.hs
test/: Main.hs  hie.yaml
test/Text/Editor/: Test.hs
test/Text/Editor/Test/PieceTable/: IO.hs  Pure.hs  Types.hs
test/Text/Editor/Test/Reference/: IO.hs  Pure.hs  Yi.hs
