cabal-version:       2.4
name:                text-editors
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Text
extra-source-files:  CHANGELOG.md
data-files:
  data-files/empty.txt

library
  exposed-modules:     Text.Editor.Types
                       Text.Editor.Reference.Pure
                       Text.Editor.Reference.IO
                       Text.Editor.PieceTable.Types
                       Text.Editor.PieceTable.Pure
                       Text.Editor.PieceTable.IO
                       Text.Editor.Editable
  build-depends:       base >=4.12.0.0 && < 5,
                       bytestring,
                       text,
                       containers,
                       mtl,
                       mmap,
                       vector,
                       vector-mmap,
                       list-zipper >= 0.0.9,
                       fingertree
  hs-source-dirs:      src
  default-language:    Haskell2010

executable text-editors
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12.0.0 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite text-editors-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Text.Editor.Test
                 Text.Editor.Test.Reference.Pure
                 Text.Editor.Test.Reference.IO
                 Text.Editor.Test.PieceTable.Pure
                 Text.Editor.Test.PieceTable.IO
  build-depends: base
               , text-editors
               , text
               , bytestring
               , time
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , mtl
  default-language: Haskell2010
  default-extensions: FlexibleContexts
